--- a/src/App.css
+++ b/src/App.css
@@ -103,11 +103,11 @@ path {
 }
 
 .enable-animation-right {
-  animation: moveRight 15s infinite alternate;
+  animation: moveRight 10s infinite alternate;
 }
 
 .enable-animation-left {
-  animation: moveLeft 15s infinite alternate;
+  animation: moveLeft 10s infinite alternate;
 }
 
 .boxShadow {
@@ -124,25 +124,17 @@ path {
   width: 100%;
   height: 100%;
   background-color: black;
-  z-index: 9999;
+
   pointer-events: none;
-  animation: fadeOut 4s ease-in-out forwards; /* Fade out the black background */
+ 
 }
 
-@keyframes fadeOut {
-  0% {
-    opacity: 1; /* Fully visible */
-  }
-  100% {
-    opacity: 0; /* Fully transparent */
-  }
-}
+
 
 /* Smoke container */
 .smoke-container {
   position: fixed;
-  bottom: 0;
-  left: 0;
+  border: 2px solid green;
   width: 100%;
   height: 100%;
   z-index: 10000;
@@ -150,17 +142,29 @@ path {
   overflow: hidden;
 }
 
+
 /* Smoke animation */
 .smoke-overlay {
   position: absolute;
-  bottom: -100%; /* Start below the screen */
-  left: 0;
   width: 100%;
   height: 100%;
-  background: url("./assets/waves.svg") repeat-x; /* Use the smoke texture */
   background-size: cover;
-  animation: riseSmoke 2s ease-in-out forwards;
+  bottom: 0; /* Start below the screen */
+  left: 0;
+  background: url("./assets/smoke4.svg") repeat-x; /* Use the smoke texture */
+ 
 }
+.smoke-overlay1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+ 
+  background: url("./assets/smoke1.svg") repeat-x; /* Use the smoke texture */
+ 
+  animation: riseSmoke 5s ease-in-out forwards;
+}
+
 
 @keyframes riseSmoke {
   0% {
@@ -170,5 +174,29 @@ path {
   100% {
     transform: translateY(-100%); /* Move to the top */
     opacity: 0; /* Fade out */
+  }
+}
+
+.scroll-content{
+  transform: translate(0%, 4.9487%) translate3d(0px, 0px, 0px);
+  will-change: transform;
+
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
